--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+
+		<!--Font Links-->
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Sora:wght@400;700&display=swap"
+			rel="stylesheet" />
+
 		<link rel="icon" type="image/svg+xml" href="/public/Assets/fav.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Romiee Match | Landing Page</title>
