--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!--Font Links-->
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;900&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;500;600;700;900&display=swap"
 			rel="stylesheet" />
 
 		<link rel="icon" type="image/svg+xml" href="/Assets/fav.png" />
